# cje

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ALL_READMES.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  MIGRATING-0.6.md  Makefile  PLAYBOOK.md  QUICKSTART.md  README.md  README_ENGINEERING.md  pyproject.toml  setup.py
.github/workflows/: build_playbook.yml  ci.yml  nightly.yml  publish-test.yml  publish.yml
cje/: __init__.py  advanced.py  array_api.py
cje/calibration/: README.md  __init__.py  dataset.py  flexible_calibrator.py  iic.py  judge.py  oracle_slice.py  simcal.py
cje/data/: README.md  __init__.py  factory.py  folds.py  fresh_draws.py  ingest.py  loaders.py  models.py  normalization.py  precomputed_sampler.py  reward_utils.py  validation.py
cje/diagnostics/: README.md  __init__.py  display.py  dr.py  gates.py  models.py  overlap.py  planning.py  reward_boundary.py  robust_inference.py  simulation_planning.py  transport.py  weights.py
cje/estimators/: README.md  __init__.py  base_estimator.py  calibrated_ips.py  direct_method.py  dr_base.py  mrdr.py  orthogonalized_calibrated_dr.py  orthogonalized_ips.py  stacking.py  tmle.py  tr_cpo.py
cje/experiments/: offset_vs_refit_README.md  offset_vs_refit_simulation.py
cje/interface/: README.md  _removed.py  analysis.py  cli.py  config.py  factory.py  mode_detection.py  service.py
cje/teacher_forcing/: README.md
cje/teacher_forcing/api/: fireworks.py
cje/teacher_forcing/templates/: fireworks.py
cje/tests/: README.md  conftest.py  run_all_tests.py  test_array_api.py  test_bootstrap_inference.py  test_bootstrap_statistical_sanity.py  test_calibration_data_estimand.py  test_calibration_data_smoke.py  test_cle_diagnostics.py  test_cli_analyze.py  test_cli_validate.py  test_covariates.py  test_covariates_arena.py  test_data_contract_remediation.py  test_data_loaders.py  test_direct_diagnostics.py  test_direct_routing_final.py  test_doc_snippets.py  test_e2e_estimators.py  test_e2e_features.py  test_estimator_config.py  test_examples.py  test_inference_unification.py  test_infrastructure.py  test_ingestion_unification.py  test_interface_integration.py  test_loud_by_default.py  test_mc_coverage.py  test_mc_variance.py  test_migration_errors.py  test_normalization.py  test_offset_vs_refit_simulation.py  test_opencompass_bridge.py  test_oua_at_full_coverage.py  test_oua_jackknife_formula.py  test_oua_two_stage_routing.py  test_planning.py  test_planning_polish.py  test_planning_semantics.py  test_planning_viz.py  (+11 more)
cje/tests/data/: opencompass_format_details.json  opencompass_ppl_format.json  opencompass_sample.json
cje/utils/: README.md  __init__.py  aggregate_diagnostics.py  analyze_diagnostics.py  export.py
cje/visualization/: README.md  __init__.py  calibration.py  estimates.py  planning.py  transport.py  weight_dashboards.py
docs/: README_AUDIT_REPORT.md  calibration.md  diagnostics.md  index.md  quickstart.md
docs/modes/: direct.md  dr.md  ips.md
docs/playbook/: .gitignore  Makefile  README.md  README_CALIBRATION_PLOTS.md  README_CONCAT.md  README_WEB.md  build_web.sh  cross_fitting_overview.md  generate_calibration_plot.py  generate_two_stage_comparison.py  generate_two_stage_detailed.py  generate_two_stage_simple.py  generate_weight_comparison.py  generate_weight_comparison_direct.py  generate_weight_comparison_simple.py  main.tex  plot_oua_vs_base_sample_size.py  plot_oua_vs_base_variance.py  references.bib  test_transportability_ablations.py
docs/playbook/sections/: 01_introduction.tex  02_dm.tex  03_offpolicy.tex  04_diagnostics.tex  05_assumptions.tex  06_playbook.tex  07_cases.tex  08_implementation.tex  09_limitations.tex  10_conclusion.tex
docs/playbook/style/: cje.sty
examples/: 01_minimal.py  01_understanding_modes.py  02_minimal.py  02_with_fresh_draws.py  03_comparing_policies.py  03_with_fresh_draws.py  04_checking_reliability.py  04_comparing_policies.py  05_checking_reliability.py  06_testing_transport.py  README.md  cje_advanced.ipynb  cje_arena_demo.ipynb  cje_core_demo.ipynb  cje_direct_mode_intro.ipynb  cje_ope_methods.ipynb  cje_planning.ipynb  cje_tutorial.ipynb  forest_plot_1k_25pct.py  forest_plot_direct_mode.py  forest_plot_direct_mode_simple.py  quickstart.py
examples/arena_sample/: README.md  dataset.jsonl  logged_data.jsonl
examples/arena_sample/fresh_draws/: base_responses.jsonl  clone_responses.jsonl  parallel_universe_prompt_responses.jsonl  unhelpful_responses.jsonl
examples/arena_sample/probe_slice/: clone_probe.jsonl  parallel_universe_prompt_probe.jsonl  unhelpful_probe.jsonl
examples/arena_sample/responses/: clone_responses.jsonl  parallel_universe_prompt_responses.jsonl  unhelpful_responses.jsonl
experiments/: README.md
experiments/offset_vs_refit/: README.md  offset_vs_refit_simulation.py  test_offset_vs_refit_simulation.py
scripts/cje_bridges/: README.md  convert.py
scripts/langsmith_cje/: langsmith_to_cje.py
scripts/opencompass_cje/: opencompass_to_cje.py
scripts/promptfoo_cje/: promptfoo_to_cje.py
scripts/trulens_cje/: trulens_to_cje.py
skills/cje/: SKILL.md  reference.md
