[tool.poetry]
name = "cje-eval"
version = "0.6.0rc1"
description = "Causal Judge Evaluation - Calibrated LLM-judge evaluation with calibration-aware confidence intervals"
authors = ["Eddie Landesberg <eddie@cimolabs.com>"]
license = "MIT"
packages = [{ include = "cje" }]
exclude = ["cje/tests", "cje/tests/**/*"]
readme = "README.md"
homepage = "https://cimolabs.com/cje"
repository = "https://github.com/cimo-labs/cje"
documentation = "https://cimolabs.com/cje"
keywords = ["evaluation", "llm", "llm-judge", "causal-inference", "calibration", "judge-calibration"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
# Core dependencies
numpy = ">=1.26,<3.0"  # numpy 2.x; full 3.10-3.13 matrix exercised in CI
scipy = "^1.11.0"
scikit-learn = "^1.4"
pydantic = ">=2.6,<3.0"

# Optional dependency groups
matplotlib = {version = "^3.8", optional = true}

[tool.poetry.extras]
viz = ["matplotlib"]
all = ["matplotlib"]

[tool.poetry.scripts]
cje = "cje.interface.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1"
mypy = "^1.10"
pytest = "^8.0"
pytest-cov = "^5.0"
pre-commit = "^3.7"
ipykernel = "^6.29.5"
# Documentation now hosted on cimolabs.com - Sphinx dependencies removed
pytest-xdist = "^3.7.0"
matplotlib = "^3.8"  # Required for testing visualization code

# CLI scripts can be defined here when needed

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["examples/"]

[tool.pytest.ini_options]
# Pytest configuration
addopts = [
    "--strict-markers",
    "--tb=short"
]
testpaths = ["cje/tests"]

[tool.coverage.run]
omit = ["cje/tests/*"]

[tool.coverage.report]
omit = ["cje/tests/*"]

[build-system]
requires = ["poetry-core==1.9.1"]
build-backend = "poetry.core.masonry.api"
